fix: masks fixed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
         <div class="for-nav">
             <nav class="sidebar">
-                <a class="logo" href="#"><span>&nbspW&nbsp</span></a>
+                <a class="logo" href="#"><p>W</p></a>
                 <div class="sidebar__wrapper">
                     <a href="">
                         <input type="radio" name="nav__btn" id="nav__btn--1">
@@ -133,7 +133,38 @@
             <div class="wrapper__middle">
                 <main>
                     <section class="revenue-month">
-                        <h3>Monthly Revenue Progress</h3>
+                        <div class="revenue-month__title">
+                            <h3>Monthly Revenue Progress</h3>
+                            <input type="radio" name="times" id="times-month" checked>
+                            <label for="times-month">Month</label>
+                            <input type="radio" name="times" id="times-day">
+                            <label for="times-day">Day</label>
+                            <input type="radio" name="times" id="times-year">
+                            <label for="times-year">Year</label>
+                            <div class="burger"></div>
+                        </div>
+                        <div class="line-chart__graph">
+                            <p>400k</p>
+                            <p>300k</p>
+                            <p>200k</p>
+                            <p>100k</p>
+                        </div>
+                        <div class="line-chart__bottom">
+                            <div class="months">
+                                <p>Jan</p>
+                                <p>Feb</p>
+                                <p>Mar</p>
+                                <p>Apr</p>
+                                <p>May</p>
+                                <p>Jun</p>
+                                <p>Jul</p>
+                                <p>Aug</p>
+                                <p>Sep</p>
+                                <p>Oct</p>
+                                <p>Nov</p>
+                                <p>Dec</p>
+                            </div>
+                        </div>
                     </section>
                     <section class="revenue-hour">
                         <h3>Revenue Per Hour</h3>
@@ -243,9 +274,7 @@
                                     <p>simply dummy text of the printing and typesetting industry.
                                         Lorem Ipsum has been the industry's standard dummy text
                                         ever since the 1500s, when an</p>
-                                    <div class="clock">
-                                        <p>12:24 AM</p>
-                                    </div>
+                                    <p class="clock">12:24 AM</p>
                                 </li>
                                 <li>
                                     <input type="checkbox" name="task" id="task2">
@@ -253,9 +282,7 @@
                                     <p>simply dummy text of the printing and typesetting industry.
                                         Lorem Ipsum has been the industry's standard dummy text
                                         ever since the 1500s, when an</p>
-                                    <div class="clock">
-                                        <p>1:10 AM</p>
-                                    </div>
+                                    <p class="clock">1:10 AM</p>
                                 </li>
                                 <li>
                                     <input type="checkbox" name="task" id="task3">
@@ -263,9 +290,7 @@
                                     <p>simply dummy text of the printing and typesetting industry.
                                         Lorem Ipsum has been the industry's standard dummy text
                                         ever since the 1500s, when an</p>
-                                    <div class="clock">
-                                        <p>1:24 AM</p>
-                                    </div>
+                                    <p class="clock">1:24 AM</p>
                                 </li>
                                 <li>
                                     <input type="checkbox" name="task" id="task4">
@@ -273,9 +298,7 @@
                                     <p>simply dummy text of the printing and typesetting industry.
                                         Lorem Ipsum has been the industry's standard dummy text
                                         ever since the 1500s, when an</p>
-                                    <div class="clock">
-                                        <p>1:30 AM</p>
-                                    </div>
+                                    <p class="clock">1:30 AM</p>
                                 </li>
                                 <li>
                                     <input type="checkbox" name="task" id="task5" checked>
@@ -283,9 +306,7 @@
                                     <p>simply dummy text of the printing and typesetting industry.
                                         Lorem Ipsum has been the industry's standard dummy text
                                         ever since the 1500s, when an</p>
-                                    <div class="clock">
-                                        <p>12:24 AM</p>
-                                    </div>
+                                    <p class="clock">12:24 AM</p>
                                 </li>
                                 <li>
                                     <input type="checkbox" name="task" id="task6">
@@ -293,9 +314,7 @@
                                     <p>simply dummy text of the printing and typesetting industry.
                                         Lorem Ipsum has been the industry's standard dummy text
                                         ever since the 1500s, when an</p>
-                                    <div class="clock">
-                                        <p>1:10 AM</p>
-                                    </div>
+                                    <p class="clock">1:10 AM</p>
                                 </li>
                                 <li>
                                     <input type="checkbox" name="task" id="task7">
@@ -303,9 +322,7 @@
                                     <p>simply dummy text of the printing and typesetting industry.
                                         Lorem Ipsum has been the industry's standard dummy text
                                         ever since the 1500s, when an</p>
-                                    <div class="clock">
-                                        <p>1:24 AM</p>
-                                    </div>
+                                    <p class="clock">1:24 AM</p>
                                 </li>
                                 <li>
                                     <input type="checkbox" name="task" id="task8">
@@ -313,9 +330,7 @@
                                     <p>simply dummy text of the printing and typesetting industry.
                                         Lorem Ipsum has been the industry's standard dummy text
                                         ever since the 1500s, when an</p>
-                                    <div class="clock">
-                                        <p>1:30 AM</p>
-                                    </div>
+                                    <p class="clock">1:30 AM</p>
                                 </li>
                                 <li>
                                     <input type="checkbox" name="task" id="task9" checked>
@@ -323,9 +338,7 @@
                                     <p>simply dummy text of the printing and typesetting industry.
                                         Lorem Ipsum has been the industry's standard dummy text
                                         ever since the 1500s, when an</p>
-                                    <div class="clock">
-                                        <p>12:24 AM</p>
-                                    </div>
+                                    <p class="clock">12:24 AM</p>
                                 </li>
                                 <li>
                                     <input type="checkbox" name="task" id="task10">
@@ -333,9 +346,7 @@
                                     <p>simply dummy text of the printing and typesetting industry.
                                         Lorem Ipsum has been the industry's standard dummy text
                                         ever since the 1500s, when an</p>
-                                    <div class="clock">
-                                        <p>1:10 AM</p>
-                                    </div>
+                                    <p class="clock">1:10 AM</p>
                                 </li>
                             </ul>
                         </section>
@@ -512,5 +523,6 @@
             </div>
         </div>
     </div>
+    <div class="icon icon-folder"></div>
 </body>
 </html>
