--- a/index.html
+++ b/index.html
@@ -143,26 +143,35 @@
                             <label for="times-year">Year</label>
                             <div class="burger"></div>
                         </div>
-                        <div class="line-chart__graph">
-                            <p>400k</p>
-                            <p>300k</p>
-                            <p>200k</p>
-                            <p>100k</p>
-                        </div>
-                        <div class="line-chart__bottom">
-                            <div class="months">
-                                <p>Jan</p>
-                                <p>Feb</p>
-                                <p>Mar</p>
-                                <p>Apr</p>
-                                <p>May</p>
-                                <p>Jun</p>
-                                <p>Jul</p>
-                                <p>Aug</p>
-                                <p>Sep</p>
-                                <p>Oct</p>
-                                <p>Nov</p>
-                                <p>Dec</p>
+                        <div class="line-chart">
+                            <div class="line-chart__vertical">
+                                <p>400k</p>
+                                <p>300k</p>
+                                <p>200k</p>
+                                <p>100k</p>
+                            </div>
+                            <div class="line-chart__graph">
+                                <div class="line-chart__block"></div>
+                                <div class="line-chart__block"></div>
+                                <div class="line-chart__block"></div>
+                                <div class="line-chart__block"></div>
+                                <div class="months">
+                                    <div class="line-red"></div>
+                                    <div class="line-blue"></div>
+                                    <div class="line-purple"></div>
+                                    <p>Jan</p>
+                                    <p>Feb</p>
+                                    <p>Mar</p>
+                                    <p>Apr</p>
+                                    <p>May</p>
+                                    <p>Jun</p>
+                                    <p>Jul</p>
+                                    <p>Aug</p>
+                                    <p>Sep</p>
+                                    <p>Oct</p>
+                                    <p>Nov</p>
+                                    <p>Dec</p>
+                                </div>
                             </div>
                         </div>
                     </section>
@@ -523,6 +532,5 @@
             </div>
         </div>
     </div>
-    <div class="icon icon-folder"></div>
 </body>
 </html>
