fix: delete useless elements

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <a href="">
                             <div class="icon icon--email"></div>
                         </a>
-                        <a href="">
+                        <a class="red-mark" href="">
                             <div class="icon icon--earth"></div>
                         </a>
                     </div>
@@ -125,9 +125,9 @@
                             <span>1020</span><span>1020</span>
                         </div>
                     </div>
-                    <div class="add">
+                    <button class="add">
                         <p>+  Add Stactics</p>
-                    </div>
+                    </button>
                 </section>
             </header>
             <div class="wrapper__middle">
