refactor: images on background now

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link href="https://allfont.ru/allfont.css?fonts=deftone-stylus" rel="stylesheet">
-    <link rel="stylesheet" href="./source/scss/style.css">
+    <!-- <link rel="stylesheet" href="./source/scss/style.css"> -->
     <title>Dashboard</title>
 </head>
 <body>
@@ -16,36 +16,26 @@
                 <div class="sidebar__wrapper">
                     <a href="">
                         <input type="radio" name="nav__btn" id="nav__btn--1">
-                        <label for="nav__btn--1">                        
-                            <img src="./source/img/nav/home.png" alt="Home">Home                        
-                        </label>
+                        <label for="nav__btn--1">Home</label>
                     </a>
                     <a href="">
                         <input type="radio" name="nav__btn" id="nav__btn--2">
-                        <label for="nav__btn--2">                        
-                            <img src="./source/img/nav/stactics.png" alt="Stactics">Stactics                        
-                        </label>
+                        <label for="nav__btn--2">Stactics</label>
                     </a>
                     <a href="">
                         <input type="radio" name="nav__btn" id="nav__btn--3">
-                        <label for="nav__btn--3">                        
-                            <img src="./source/img/nav/user.png" alt="Users">Users                        
-                        </label>
+                        <label for="nav__btn--3">Users</label>
                     </a>
                     <a href="">
                         <input type="radio" name="nav__btn" id="nav__btn--4">
-                        <label for="nav__btn--4">                        
-                            <img src="./source/img/nav/settings.png" alt="Settings">Settings                        
-                        </label>
+                        <label for="nav__btn--4">Settings</label>
                     </a>
                     <a href="">
                         <input type="radio" name="nav__btn" id="nav__btn--5">
-                        <label for="nav__btn--5">                        
-                            <img src="./source/img/nav/information.png" alt="Quires">Quires                        
-                        </label>
+                        <label for="nav__btn--5">Quires</label>
                     </a>
                     <a href="">
-                        <img src="./source/img/nav/power-button.png" alt="">
+                        <div class="power"></div>
                     </a>
                 </div>
             </nav>
