fix: add style.css again

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link href="https://allfont.ru/allfont.css?fonts=deftone-stylus" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="./source/scss/style.css"> -->
+    <link rel="stylesheet" href="./source/scss/style.css">
     <title>Dashboard</title>
 </head>
 <body>
