ref: add mixins and placeholder-selectors

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
                 <nav>
                     <div class="flex">
                         <a href="">
-                            <div class="read-more"><span></span></div>
+                            <div class="read-more"><i></i></div>
                         </a>
                         <a href="">
-                            <div class="icon icon--folder"></div>
+                            <div class="icon--folder"></div>
                         </a>
                         <a href="">
-                            <div class="icon icon--setup"></div>
+                            <div class="icon--setup"></div>
                         </a>
                     </div>
                     <div class="nav__search">
@@ -59,13 +59,13 @@
                     </div>
                     <div class="flex">
                         <a href="">
-                            <div class="icon icon--upload"></div>
+                            <div class="icon--upload"></div>
                         </a>
                         <a href="">
-                            <div class="icon icon--email"></div>
+                            <div class="icon--email"></div>
                         </a>
                         <a class="red-mark" href="">
-                            <div class="icon icon--earth"></div>
+                            <div class="icon--earth"></div>
                         </a>
                     </div>
                     <div class="flex">
@@ -388,16 +388,16 @@
                     <aside>
                         <form action="">
                             <a href="">
-                                <input type="radio" name="aside__btn" id="aside__btn-1">
-                                <label for="aside__btn-1"></label>
+                                <input type="radio" name="aside__btn" id="aside__btn--users">
+                                <label for="aside__btn--users"></label>
                             </a>
                             <a href="">
-                                <input type="radio" name="aside__btn" id="aside__btn-2">
-                                <label for="aside__btn-2"></label>
+                                <input type="radio" name="aside__btn" id="aside__btn--chat">
+                                <label for="aside__btn--chat"></label>
                             </a>
                             <a href="">
-                                <input type="radio" name="aside__btn" id="aside__btn-3">
-                                <label for="aside__btn-3"></label>
+                                <input type="radio" name="aside__btn" id="aside__btn--like">
+                                <label for="aside__btn--like"></label>
                             </a>
                         </form>
                         <div class="contacts">
