ref: add mixins for nav and renaming in index

--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
                 <a class="logo" href="#"><p>W</p></a>
                 <div class="sidebar__wrapper">
                     <a href="">
-                        <input type="radio" name="nav__btn" id="nav__btn--1">
-                        <label for="nav__btn--1">Home</label>
+                        <input type="radio" name="nav__btn" id="nav__btn--home">
+                        <label for="nav__btn--home">Home</label>
                     </a>
                     <a href="">
-                        <input type="radio" name="nav__btn" id="nav__btn--2">
-                        <label for="nav__btn--2">Stactics</label>
+                        <input type="radio" name="nav__btn" id="nav__btn--stactics">
+                        <label for="nav__btn--stactics">Stactics</label>
                     </a>
                     <a href="">
-                        <input type="radio" name="nav__btn" id="nav__btn--3">
-                        <label for="nav__btn--3">Users</label>
+                        <input type="radio" name="nav__btn" id="nav__btn--user">
+                        <label for="nav__btn--user">Users</label>
                     </a>
                     <a href="">
-                        <input type="radio" name="nav__btn" id="nav__btn--4">
-                        <label for="nav__btn--4">Settings</label>
+                        <input type="radio" name="nav__btn" id="nav__btn--settings">
+                        <label for="nav__btn--settings">Settings</label>
                     </a>
                     <a href="">
-                        <input type="radio" name="nav__btn" id="nav__btn--5">
-                        <label for="nav__btn--5">Quires</label>
+                        <input type="radio" name="nav__btn" id="nav__btn--information">
+                        <label for="nav__btn--information">Quires</label>
                     </a>
                     <a href="">
                         <div class="power"></div>
