fix: nav and aside-nav and naming

--- a/index.html
+++ b/index.html
@@ -14,26 +14,21 @@
             <nav class="sidebar">
                 <a class="logo" href="#"><p>W</p></a>
                 <div class="sidebar__wrapper">
-                    <a href="">
-                        <input type="radio" name="nav__btn" id="nav__btn--home">
-                        <label for="nav__btn--home">Home</label>
-                    </a>
-                    <a href="">
-                        <input type="radio" name="nav__btn" id="nav__btn--stactics">
-                        <label for="nav__btn--stactics">Stactics</label>
-                    </a>
-                    <a href="">
-                        <input type="radio" name="nav__btn" id="nav__btn--user">
-                        <label for="nav__btn--user">Users</label>
-                    </a>
-                    <a href="">
-                        <input type="radio" name="nav__btn" id="nav__btn--settings">
-                        <label for="nav__btn--settings">Settings</label>
-                    </a>
-                    <a href="">
-                        <input type="radio" name="nav__btn" id="nav__btn--information">
-                        <label for="nav__btn--information">Quires</label>
-                    </a>
+					<a id="nav__btn--home" href="#nav__btn--home">
+						<em>Home</em>
+					</a>
+					<a id="nav__btn--stactics" href="#nav__btn--stactics">
+						<em>Stactics</em>
+					</a>
+					<a id="nav__btn--user" href="#nav__btn--user">
+						<em>Users</em>
+					</a>
+					<a id="nav__btn--settings" href="#nav__btn--settings">
+						<em>Settings</em>
+					</a>
+					<a id="nav__btn--information" href="#nav__btn--information">
+						<em>Quires</em>
+					</a>
                     <a href="">
                         <div class="power"></div>
                     </a>
@@ -43,7 +38,7 @@
         <div class="wrapper__inner">
             <header>
                 <nav>
-                    <div class="flex">
+                    <div class="header__nav">
                         <a href="">
                             <div class="read-more"><i></i></div>
                         </a>
@@ -57,7 +52,7 @@
                     <div class="nav__search">
                         <input type="search" placeholder="Search Anything Here....">
                     </div>
-                    <div class="flex">
+                    <div class="header__nav">
                         <a href="">
                             <div class="icon--upload"></div>
                         </a>
@@ -68,7 +63,7 @@
                             <div class="icon--earth"></div>
                         </a>
                     </div>
-                    <div class="flex">
+                    <div class="header__nav">
                         <img src="./source/img/avatars/kendall-jenner.jpeg" alt="">
                         <div class="caption">
                             <h4>Kendall Jenner</h4>
@@ -386,20 +381,11 @@
                 </main>
                 <div class="aside">
                     <aside>
-                        <form action="">
-                            <a href="">
-                                <input type="radio" name="aside__btn" id="aside__btn--users">
-                                <label for="aside__btn--users"></label>
-                            </a>
-                            <a href="">
-                                <input type="radio" name="aside__btn" id="aside__btn--chat">
-                                <label for="aside__btn--chat"></label>
-                            </a>
-                            <a href="">
-                                <input type="radio" name="aside__btn" id="aside__btn--like">
-                                <label for="aside__btn--like"></label>
-                            </a>
-                        </form>
+						<div class="aside-tabs">
+                            <a id="aside__btn--users" href="#aside__btn--users"><em></em></a>
+                            <a id="aside__btn--chat" href="#aside__btn--chat"><em></em></a>
+                            <a id="aside__btn--like" href="#aside__btn--like"><em></em></a>
+						</div>
                         <div class="contacts">
                             <div class="contact__item">
                                 <img src="./source/img/avatars/leonardo-dicaprio.jpeg" alt="Leonardo Dicaprio">
